Tried to add flights to userItinerary, but can't convert flight itineraryDTO to plane ride